Don't do opacity transition because it means the error message isn't removed from the document flow. Fixed missing borders on error messages.

--- a/style.css
+++ b/style.css
@@ -166,8 +166,7 @@ td.add-award-container {
     background: #fff;
 }
 
-.error-message {
+.error-message,
+.json-error-message {
     border: 1px solid #d85030;
-    opacity: 0;
-    transition: opacity .2s;
 }
